# financial-agent

./: .dockerignore  .env.cloud.example  .env.example  .gitignore  DEPLOY.md  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  example.py  pyproject.toml  railway.toml
.github/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml
config/policies/: aml_thresholds.md  customer_communication.md  geographic_risk.md  structuring_detection.md  velocity_checks.md
docs/: project-guide.html
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
infrastructure/: init.sql
scripts/: check_task.py  diagnose_account.py  migrate_add_api_keys.py  poll_task.py  run_agent_direct.py  seed_data.py  seed_policies.py  test_agent.py  test_embed.py
src/: config.py
src/agent/: loop.py  pre_analyzer.py  prompts.py
src/api/: main.py
src/auth/: dependency.py  keys.py
src/db/: connection.py
src/events/: __init__.py  consumer.py  producer.py  worker.py
src/guardrails/: __init__.py  allowlist.py  escalation.py  output_validator.py  pii_scrubber.py  rate_limiter.py
src/llm/: adapter.py  groq.py  mock.py  ollama.py  openai.py
src/models/: anomaly.py  audit.py  escalation.py  task.py  transaction.py
src/observability/: logging.py  metrics.py
src/rag/: chunker.py  embeddings.py  retriever.py
src/tools/: anomaly.py  customer.py  policy.py  registry.py  transactions.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_guardrails.py  test_pre_analyzer.py
(+14 files in other folders)
