[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "financial-agent-system"
version = "0.1.0"
description = "Production-style agentic AI system for financial transaction analysis"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",

    # Database
    "asyncpg>=0.29.0",

    # Redis (event streaming)
    "redis>=5.0.0",

    # HTTP client (for LLM calls)
    "httpx>=0.27.0",

    # Logging
    "structlog>=24.2.0",

    # Config
    "python-dotenv>=1.0.1",

    # RAG / embeddings
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",

    # Data generation (seeding)
    "faker>=25.0.0",

    # Utilities
    "tenacity>=8.3.0",       # retry logic
    "pyyaml>=6.0.1",         # load config/guardrails.yml
    "python-ulid>=2.2.0",    # readable IDs (optional)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",         # TestClient
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
